<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:visibility="visible"
    tools:context=".activity.MainActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/MainActivityUsernameTaskHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/MainActivityImageToSettings"
        android:layout_width="57dp"
        android:layout_height="58dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?android:attr/fingerprintAuthDrawable"
        app:tint="@android:color/white"
        tools:ignore="ContentDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MainActivityTaskRecyclerView"
        android:layout_width="384dp"
        android:layout_height="252dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="148dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/MainActivityAddTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:text="Add Task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/MainActivityTotalTaskTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityTaskRecyclerView" />

    <Button
        android:id="@+id/MainActivityAdButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:text="Ads"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>