<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".activity.AddTaskActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="137dp"
        android:layout_height="87dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_task"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/ActivityAddThisTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/add_the_task_you_made_button"
        android:text="@string/add_this_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskSubmittedText"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,RedundantDescriptionCheck" />

    <EditText
        android:id="@+id/AddTaskActivityTaskTitle"
        android:layout_width="329dp"
        android:layout_height="69dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="5dp"
        android:alpha=".5"
        android:autofillHints=""
        android:contentDescription="@string/add_title_for_your_task"
        android:ems="10"
        android:hint="@string/input_your_task_title"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="ContentDescription,LabelFor,SpeakableTextPresentCheck,TextContrastCheck,EditableContentDescCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/task_title"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskActivityTaskTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityTaskImageView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/task_description"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityTaskTitle" />

    <TextView
        android:id="@+id/addTaskSubmittedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="10dp"
        android:text="@string/submitted"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityTeamSpinner" />

    <Spinner
        android:id="@+id/AddTaskActivitySpinner"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:alpha="1"
        android:backgroundTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityAddTaskDescription"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/AddTaskActivityTeamSpinner"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:alpha="1"
        android:backgroundTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivitySpinner" />

    <EditText
        android:id="@+id/AddTaskActivityAddTaskDescription"
        android:layout_width="324dp"
        android:layout_height="61dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:alpha=".5"
        android:ems="10"
        android:hint="@string/input_description_of_your_task"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/AddTaskActivityTaskImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="131dp"
        android:contentDescription="@string/picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_with_whiteborder"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>