<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".activity.AllTasksActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/all_tasks_page"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AllTasksDescriptionTextView"
        android:layout_width="355dp"
        android:layout_height="77dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/status"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AllTasksActivityTranslationTextView" />

    <TextView
        android:id="@+id/AllTasksStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/AllTaskActivityS3ImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="158dp"
        android:contentDescription="@string/ImageS3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AllTasksStatusTextView"
        app:srcCompat="@drawable/button_with_whiteborder"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/AllTasksActivityLocationTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="182dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AllTaskActivityS3ImageView" />

    <TextView
        android:id="@+id/AllTasksActivityTranslationTextView"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AllTasksDescriptionTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>