<resources>
    <string name="app_name">taskmaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">ADD TASK</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="a_default_picture">A Default Picture</string>
    <string name="add_this_task">Add This Task</string>
    <string name="add_a_task">Add a Task</string>
    <string name="green_square">Green Square</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Task Description</string>
    <string name="total_tasks_0">Total tasks: 0</string>
    <string name="submitted">Submitted!</string>
...
